--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/avril-gh" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="page2.html" id="test-page-2" class="button"><span>Test page 2</span></a>
         </section>
 
         <hr>
