--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
         <h3>Welcome to Avril's page at GitHub</h3>
 
         <hr>
-
-
+        <h4>Some info</h4>
+		Im busy for now a little, but soon, you'll find something nice here when ill get more time.<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+        <h6>have fun~</h6>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
